--- a/content/posts/anotherPost.mdx
+++ b/content/posts/anotherPost.mdx
@@ -1,5 +1,5 @@
 ---
-title: Just Another Blog Post
+title: Just Another Blog Posty
 excerpt: >
   Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit
   maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad
@@ -22,7 +22,7 @@ const test = "example code"
 
 > Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh. Pha
 >
-> retra, euismod vitae interdum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis diam.
+> retra, euismod vitae intum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis diam.
 
 ![This is an image](http://res.cloudinary.com/deuzrsg3m/image/upload/v1631389967/apfx/kevin-bosc-oeqBJZd1GWY-unsplash\_rtuyot.jpg "Building, by Thomas Carlisle")
 
